# pcl-python-bindings

./: .env  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: pip.yml  wheels.yml
scripts/: README.md  build-wheel.ps1  load-env.ps1
src/: bind_utils.hpp  python_common.cpp  python_features.cpp  python_filters.cpp  python_io.cpp  python_registration.cpp  python_segmentation.cpp  python_visualization.cpp
src/pcl/: __init__.py
src/pcl/common/: __init__.py  _pointtypes.py
src/pcl/features/: __init__.py
src/pcl/filters/: __init__.py
src/pcl/io/: __init__.py
src/pcl/registration/: __init__.py
src/pcl/segmentation/: __init__.py
src/pcl/visualization/: __init__.py
tests/: test_common.py  test_feature_descriptors.py  test_features.py  test_filters.py  test_registration.py  test_segmentation.py  test_visualization.py
